# nabard

./: .gitignore  README.md  docker-compose.yml  nabard.pptx
apps/web/: index.html  nginx.conf  package-lock.json  package.json
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/api/: client.ts  types.ts
apps/web/src/auth/: AuthContext.tsx
apps/web/src/components/: AppShell.tsx  Brand.tsx  Counter.tsx  ForecastChart.tsx  LanguageToggle.tsx  OfflineBanner.tsx  RiskBadge.tsx  ThemeToggle.tsx  icons.tsx
apps/web/src/hooks/: useLandingMotion.ts
apps/web/src/i18n/: index.ts
apps/web/src/offline/: db.ts  sync.ts
backend/: .dockerignore  Dockerfile  generate_flowcharts.py  pyproject.toml
backend/data/: enterprises.csv  external_daily.csv  loans.csv  monthly_labels.csv  shocks.csv  summary.json
backend/models/: forecast_feature_spec.json  forecaster_p10.txt  forecaster_p50.txt  forecaster_p90.txt  risk.txt  risk_calibrator.pkl  risk_feature_spec.json
backend/reports/: model_eval.md
backend/src/cashflow/api/: db.py  deps.py  main.py  models.py  schemas.py  security.py  seed.py
backend/src/cashflow/api/config_data/: categories.json  suggestions.yaml
backend/src/cashflow/api/routers/: admin.py  auth.py  config.py  enterprises.py  portfolio.py  sync.py
backend/src/cashflow/ml/: drivers.py  features.py  infer.py  suggestions.py  train_forecast.py  train_risk.py
backend/src/cashflow/simulator/: external_signals.py  generate.py  sanity_check.py  sectors.py  shocks.py
docs/: ARCHITECTURE.md  DELIVERY-PLAN.md  PRD.md  SUBMISSION.md  TRD.md
(+8 files in other folders)
