[project]
name = "cashflow-sahayak"
version = "0.1.0"
description = "AI-driven cash flow prediction & risk flagging for rural micro enterprises"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "pyjwt>=2.9",
    "bcrypt>=4.1,<4.2",
    "python-multipart>=0.0.9",
    "pandas>=2.2",
    "numpy>=1.26",
    "lightgbm>=4.5",
    "scikit-learn>=1.5",
    "shap>=0.46",
    "llvmlite>=0.43",
    "numba>=0.60",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "matplotlib>=3.9",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cashflow"]
